{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 44,
  "lineage": "5812399a-de39-d577-9b6e-fe7157103bcc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:010741811178:vpc/vpc-016b0fb01a1d31451",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0da8d379e192f2506",
            "default_route_table_id": "rtb-0fc74a710e11fb3eb",
            "default_security_group_id": "sg-05084dedf9d778632",
            "dhcp_options_id": "dopt-059a654c908f484dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-016b0fb01a1d31451",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc74a710e11fb3eb",
            "owner_id": "010741811178",
            "region": "eu-central-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:010741811178:security-group/sg-0b8fb9afe47d21d72",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b8fb9afe47d21d72",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d1574e41af4f656"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "boxdletters-cluster-20260317205819304700000003",
            "name_prefix": "boxdletters-cluster-",
            "owner_id": "010741811178",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "boxdletters-cluster"
            },
            "tags_all": {
              "Name": "boxdletters-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-016b0fb01a1d31451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:010741811178:security-group/sg-04d1574e41af4f656",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d1574e41af4f656",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 10251/tcp webhook",
                "from_port": 10251,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8fb9afe47d21d72"
                ],
                "self": false,
                "to_port": 10251
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8fb9afe47d21d72"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8fb9afe47d21d72"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8fb9afe47d21d72"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8fb9afe47d21d72"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8fb9afe47d21d72"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8fb9afe47d21d72"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "boxdletters-node-20260317205819304700000004",
            "name_prefix": "boxdletters-node-",
            "owner_id": "010741811178",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "boxdletters-node",
              "kubernetes.io/cluster/boxdletters": "owned"
            },
            "tags_all": {
              "Name": "boxdletters-node",
              "kubernetes.io/cluster/boxdletters": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-016b0fb01a1d31451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3033161595",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-0b8fb9afe47d21d72",
            "security_group_rule_id": "sgr-0df62450830ee5b08",
            "self": false,
            "source_security_group_id": "sg-04d1574e41af4f656",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3930525540",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "eu-central-1",
            "security_group_id": "sg-04d1574e41af4f656",
            "security_group_rule_id": "sgr-08db070c4b180d3b2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_10251_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 10251/tcp webhook",
            "from_port": 10251,
            "id": "sgrule-4234180920",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-04d1574e41af4f656",
            "security_group_rule_id": "sgr-00f824e7404e0f8a9",
            "self": false,
            "source_security_group_id": "sg-0b8fb9afe47d21d72",
            "timeouts": null,
            "to_port": 10251,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3041070430",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-04d1574e41af4f656",
            "security_group_rule_id": "sgr-073cfc1eb91858694",
            "self": false,
            "source_security_group_id": "sg-0b8fb9afe47d21d72",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-233657926",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-04d1574e41af4f656",
            "security_group_rule_id": "sgr-04b0429cee88a0eb4",
            "self": false,
            "source_security_group_id": "sg-0b8fb9afe47d21d72",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3299815888",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-04d1574e41af4f656",
            "security_group_rule_id": "sgr-092f1247a4cbd93d4",
            "self": false,
            "source_security_group_id": "sg-0b8fb9afe47d21d72",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3623030257",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-04d1574e41af4f656",
            "security_group_rule_id": "sgr-08c92553e8bcbce1d",
            "self": false,
            "source_security_group_id": "sg-0b8fb9afe47d21d72",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3008511546",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-04d1574e41af4f656",
            "security_group_rule_id": "sgr-0bcf230b0519460d3",
            "self": false,
            "source_security_group_id": "sg-0b8fb9afe47d21d72",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3358140739",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-04d1574e41af4f656",
            "security_group_rule_id": "sgr-08d77dc9ed7256dde",
            "self": false,
            "source_security_group_id": "sg-0b8fb9afe47d21d72",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-929424144",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-04d1574e41af4f656",
            "security_group_rule_id": "sgr-0ffe0b6ad81efbc72",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4071237931",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-04d1574e41af4f656",
            "security_group_rule_id": "sgr-014654e1248160993",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1458932420",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "eu-central-1",
            "security_group_id": "sg-04d1574e41af4f656",
            "security_group_rule_id": "sgr-03bb7535781c632f6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"boxdletters_node_group\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"boxdletters_node_group\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}